--- a/young-quartz/src/main/resources/quartz.properties
+++ b/young-quartz/src/main/resources/quartz.properties
@@ -38,11 +38,11 @@ org.quartz.scheduler.batchTriggerAcquisitionFireAheadTimeWindow=0
 org.quartz.threadPool.threadCount=10
 
 # JDBC配置
-org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
-org.quartz.jobStore.dataSource=MCDS
-org.quartz.dataSource.MCDS.driver=com.mysql.cj.jdbc.Driver
-org.quartz.dataSource.MCDS.URL=jdbc:mysql://localhost:3306/fairchild?useSSL=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-org.quartz.dataSource.MCDS.user=root
-org.quartz.dataSource.MCDS.password=123456
-org.quartz.dataSource.MCDS.maxConnections=30
+#org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
+#org.quartz.jobStore.dataSource=MCDS
+#org.quartz.dataSource.MCDS.driver=com.mysql.cj.jdbc.Driver
+#org.quartz.dataSource.MCDS.URL=jdbc:mysql://localhost:3306/fairchild?useSSL=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+#org.quartz.dataSource.MCDS.user=root
+#org.quartz.dataSource.MCDS.password=123456
+#org.quartz.dataSource.MCDS.maxConnections=30
 # JDBC配置
