--- a/young-quartz/src/main/resources/quartz.properties
+++ b/young-quartz/src/main/resources/quartz.properties
@@ -1,4 +1,7 @@
 # BEGIN 主配置
+#============================================================================
+# Configure Main Scheduler Properties 调度器属性
+#============================================================================
 # 值可以是任意字符串，并且值本身对调度程序本身没有意义。而是当同一个程序中使用多个实例，它用作客户端代码区分调度程序机制。如果使用集群，则必须为集群中的每个实例在逻辑上相同的Scheduler中使用相同的名称
 org.quartz.scheduler.instanceName = scheduler-demo
 # 值可以为任意字符串，但是对于所有工作的调度程序来说必须是唯一的，就像它们在集群中是相同的“逻辑”调度程序一样。如果希望为您生成ID，则可以将值“ AUTO”用作instanceId。如果希望该值来自系统属性“ org.quartz.scheduler.instanceId”，则为“ SYS_PROP”。默认值为NON_CLUSTERED
@@ -31,18 +34,60 @@ org.quartz.scheduler.skipUpdateCheck=false
 # 允许调度程序节点一次获取（触发）的最大触发器数。默认值是1。数字越大，触发效率越高（在一次触发很多触发器的情况下）-但代价是群集节点之间的负载可能不平衡。如果此属性的值设置为> 1，并且使用JDBC JobStore，则必须将属性“ org.quartz.jobStore.acquireTriggersWithinLock”设置为“ true”，以避免数据损坏。
 org.quartz.scheduler.batchTriggerAcquisitionMaxCount=1
 # 允许触发器被捕获并在其计划的触发时间之前触发的时间（以毫秒为单位）。
-# 默认值是0。数字越大，触发触发器的批量采集越有可能一次选择并触发1个以上的触发器-代价是未严格遵守触发时间表（触发器可能会提早触发此数量） ）。在调度程序具有大量需要同时或接近同时触发的触发器的情况下，这可能很有用（出于性能考虑）。
+# 默认值是0。数字越大，触发触发器的批量采集越有可能一次选择并触发1个以上的触发器-代价是未严格遵守触发时间表（触发器可能会提早触发此数量） ）。在调度程序具有大量需要同时或接近同时触发的触发器的情况下，这可能很有用（出于性能考虑）。【非必须】
 org.quartz.scheduler.batchTriggerAcquisitionFireAheadTimeWindow=0
 # END 主配置
 
+#============================================================================
+# Configure ThreadPool 线程池属性
+#============================================================================
+# 指定线程数，至少为1（无默认值）(一般设置为1-100直接的整数合适)【默认-1】【必须】
 org.quartz.threadPool.threadCount=10
+# 线程池的实现类（定长线程池，几乎可满足所有用户的需求）【默认null】【必须】
+org.quartz.threadPool.class = org.quartz.simpl.SimpleThreadPool
+
+# ============================================================================
+# 设置SimpleThreadPool的一些属性，一般使用默认值
+# ============================================================================
+# 设置是否为守护线程
+#org.quartz.threadpool.makethreadsdaemons = false
+
+#org.quartz.threadPool.threadsInheritContextClassLoaderOfInitializingThread = true
+
+#org.quartz.threadpool.threadsinheritgroupofinitializingthread = false
+
+#线程前缀默认值是：[Scheduler Name]_Worker
+
+#org.quartz.threadpool.threadnameprefix = swhJobThead;
+
+
+# =============================================================================
+# 配置全局监听(TriggerListener,JobListener) 则应用程序可以接收和执行 预定的事件通知
+# =============================================================================
+# Configuring a Global TriggerListener 配置全局的Trigger监听器。
+
+# MyTriggerListenerClass 类必须有一个无参数的构造函数，和 属性的set方法，目前2.2.x只支持原始数据类型的值（包括字符串）
+#org.quartz.triggerListener.NAME.class = com.swh.MyTriggerListenerClass
+
+#org.quartz.triggerListener.NAME.propName = propValue
+
+#org.quartz.triggerListener.NAME.prop2Name = prop2Value
+
+# ==============================================================================
+# Configuring a Global JobListener 配置全局的Job监听器
+# ==============================================================================
+
+
+
 
 # JDBC配置
-#org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
-#org.quartz.jobStore.dataSource=MCDS
-#org.quartz.dataSource.MCDS.driver=com.mysql.cj.jdbc.Driver
-#org.quartz.dataSource.MCDS.URL=jdbc:mysql://localhost:3306/fairchild?useSSL=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-#org.quartz.dataSource.MCDS.user=root
-#org.quartz.dataSource.MCDS.password=123456
-#org.quartz.dataSource.MCDS.maxConnections=30
+org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
+org.quartz.jobStore.dataSource=MCDS
+org.quartz.dataSource.MCDS.driver=com.mysql.cj.jdbc.Driver
+org.quartz.dataSource.MCDS.URL=jdbc:mysql://localhost:3306/fairchild?useSSL=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+org.quartz.dataSource.MCDS.user=root
+org.quartz.dataSource.MCDS.password=123456
+org.quartz.dataSource.MCDS.maxConnections=30
 # JDBC配置
+
+config.decrypt=true
