--- a/young-quartz/pom.xml
+++ b/young-quartz/pom.xml
@@ -24,6 +24,20 @@
       <artifactId>quartz</artifactId>
       <version>2.3.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>druid-spring-boot-starter</artifactId>
+      <version>1.1.20</version>
+    </dependency>
+
+    <!-- JavaMail -->
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
+      <version>1.4</version>
+    </dependency>
+
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-jdk14</artifactId>
