--- a/jpa/src/main/resources/application.properties
+++ b/jpa/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://cdb-q9atzwrq.bj.tencentcdb.com:10167/springboot_jpa?useSSL=false&serverTimezone=CTT
+spring.datasource.url=jdbc:mysql://localhost:3306/springboot_jpa?useSSL=false&serverTimezone=CTT
 spring.datasource.username=root
-spring.datasource.password=mxz123456
+spring.datasource.password=123456
 # 打印出 sql 语句
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
