--- a/jpa/src/main/resources/application.properties
+++ b/jpa/src/main/resources/application.properties
@@ -1,9 +1,25 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/springboot_jpa?useSSL=false&serverTimezone=CTT
+server.port=80
+
+# Hibernate 相关配置
+
+## 自动扫描的包前缀
+entitymanager.packagesToScan= com.zslin
+
+## 数据库连接
+spring.datasource.url=jdbc:mysql://localhost:3306/study05?\
+  useUnicode=true&characterEncoding=utf-8&useSSL=true&autoReconnect=true
+
+## 用户名
 spring.datasource.username=root
-spring.datasource.password=123456
-# 打印出 sql 语句
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.open-in-view=false
-# 创建的表的 ENGINE 为 InnoDB
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
+
+## 密码
+spring.datasource.password=123
+
+## 数据库驱动
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+## 建表方式
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+
+# 方言
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
