--- a/wx/src/main/resources/application.properties
+++ b/wx/src/main/resources/application.properties
@@ -1,6 +1,17 @@
 #server配置
 server.port=80
-
-
-
 spring.freemarker.check-template-location=false
+# 模板配置
+# 这个开发配置为false，避免改了模板还要重启服务器
+spring.thymeleaf.cache=false
+# 这个是配置模板路径的，默认就是templates，可不用配置
+spring.thymeleaf.prefix=classpath:/templates/
+# 这个可以不配置，检查模板位置
+spring.thymeleaf.check-template-location=true
+# 下面3个不做解释了，可以不配置
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.servlet.content-type=text/html
+
+# 模板的模式
+spring.thymeleaf.mode=HTML
