--- a/codingce-wx/pom.xml
+++ b/codingce-wx/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>wx</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>wx</name>
-    <description>微信项目demo,欢迎关注掌上编程</description>
+    <description>微信项目demo,欢迎关注掌上编程，自己还是建议使用微信Api去开发，本项目仅仅是没接触微信Api之前开发的一个demo，实现网页授权用户信息，欢迎交流</description>
 
     <properties>
         <java.version>1.8</java.version>
