--- a/mySpring/pom.xml
+++ b/mySpring/pom.xml
@@ -16,6 +16,7 @@
         <module>spring-05-before</module>
         <module>spring-05-Autowired</module>
         <module>spring-06-anno</module>
+        <module>spring-07-appconfig</module>
     </modules>
 
     <dependencies>
