--- a/mySpring/pom.xml
+++ b/mySpring/pom.xml
@@ -17,6 +17,7 @@
         <module>spring-05-Autowired</module>
         <module>spring-06-anno</module>
         <module>spring-07-appconfig</module>
+        <module>spring-08-proxy</module>
     </modules>
 
     <dependencies>
