--- a/mySpring/pom.xml
+++ b/mySpring/pom.xml
@@ -19,6 +19,7 @@
         <module>spring-07-appconfig</module>
         <module>spring-08-proxy</module>
         <module>spring-09-aop</module>
+        <module>spring-10-mybatis</module>
     </modules>
 
     <dependencies>
@@ -26,7 +27,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>5.2.0.RELEASE</version>
+            <version>5.2.5.RELEASE</version>
         </dependency>
         <!--junit-->
         <dependency>
