F 修复500, 增加前端页面

--- a/SpringMVC/springmvc-06-ssm01/src/main/resources/database.properties
+++ b/SpringMVC/springmvc-06-ssm01/src/main/resources/database.properties
@@ -1,4 +1,4 @@
-driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://cdb-q9atzwrq.bj.tencentcdb.com:10167/ssmbuild?useSSL=true&useUnicode=true
-username=root
-password=123456
+jdbc.driver=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://cdb-q9atzwrq.bj.tencentcdb.com:10167/ssmbuild?useSSL=true&useUnicode=true
+jdbc.username=root
+jdbc.password=mxz123456
