--- a/SpringMVC/springmvc-06-ssm01/pom.xml
+++ b/SpringMVC/springmvc-06-ssm01/pom.xml
@@ -18,10 +18,11 @@
             <version>4.12</version>
         </dependency>
         <!--数据库驱动-->
+        <!--mysql驱动-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.47</version>
+            <version>8.0.16</version>
         </dependency>
         <!-- 数据库连接池 c3p0-->
         <dependency>
