--- a/SpringMVC/springmvc-06-ssm01/src/main/resources/database.properties
+++ b/SpringMVC/springmvc-06-ssm01/src/main/resources/database.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
 jdbc.url=jdbc:mysql://cdb-q9atzwrq.bj.tencentcdb.com:10167/ssmbuild?useSSL=true&useUnicode=true
 jdbc.username=root
-jdbc.password=mxz123456
+jdbc.password=123456
