--- a/codingce-springboot/pom.xml
+++ b/codingce-springboot/pom.xml
@@ -35,6 +35,14 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+
+		<!-- 导入配置文件处理器，配置文件进行绑定就会有提示，需要重启 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
