--- a/codingce-springboot/springboot-03-web/pom.xml
+++ b/codingce-springboot/springboot-03-web/pom.xml
@@ -19,6 +19,13 @@
     </properties>
 
     <dependencies>
+
+        <!--thymeleaf-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>jquery</artifactId>
