--- a/codingce-springboot/springboot-03-web/src/main/resources/application.properties
+++ b/codingce-springboot/springboot-03-web/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-# 自定义的配置日期格式化
+# \u81EA\u5B9A\u4E49\u7684\u914D\u7F6E\u65E5\u671F\u683C\u5F0F\u5316
 # spring.mvc.date-format=""
 
-# 环关闭模板引擎的缓存
+# \u73AF\u5173\u95ED\u6A21\u677F\u5F15\u64CE\u7684\u7F13\u5B58
 spring.thymeleaf.cache=false
 
+# \u6211\u4EEC\u7684\u914D\u7F6E\u6587\u4EF6\u7684\u771F\u5B9E\u4F4D\u7F6E
+spring.messages.basename=i18n.login
