--- a/codingce-springboot/springboot-03-web/src/main/resources/application.properties
+++ b/codingce-springboot/springboot-03-web/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.thymeleaf.cache=false
 
 # \u6211\u4EEC\u7684\u914D\u7F6E\u6587\u4EF6\u7684\u771F\u5B9E\u4F4D\u7F6E
 spring.messages.basename=i18n.login
+
+# \u65F6\u95F4\u65E5\u671F\u683C\u5F0F\u5316 \u914D\u7F6E\u8FD9\u4E2A   2020/08/15\u5C31\u4E0D\u80FD\u80FD\u884C\u4E86
+spring.mvc.date-format=yyyy-MM-dd
