--- a/codingce-springboot/springboot-06-mybatis/pom.xml
+++ b/codingce-springboot/springboot-06-mybatis/pom.xml
@@ -30,6 +30,13 @@
             <version>2.1.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
