--- a/codingce-springboot/springboot-06-mybatis/src/main/resources/application.yml
+++ b/codingce-springboot/springboot-06-mybatis/src/main/resources/application.yml
@@ -32,4 +32,4 @@ spring:
 # 整合Mybatis
 mybatis:
   type-aliases-package: cn.com.codingce.pojo
-  mapper-locations: classpath:mybatis/mapper/*.xml
+  mapper-locations: classpath:mapper/*.xml
