--- a/codingce-springboot/springboot-06-mybatis/pom.xml
+++ b/codingce-springboot/springboot-06-mybatis/pom.xml
@@ -19,6 +19,12 @@
     </properties>
 
     <dependencies>
+        <!--thymeleaf-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
