--- a/codingce-springboot/springboot-06-mybatis/src/main/resources/application.yml
+++ b/codingce-springboot/springboot-06-mybatis/src/main/resources/application.yml
@@ -28,6 +28,13 @@ spring:
     maxPoolPreparedStatementPerConnectionSize: 20
     useGlobalDataSourceStat: true
     connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
+  messages:
+    basename: i18n.login
+  thymeleaf:
+    cache: false
+
+  mvc:
+    date-format: yyyy-MM-dd
 
 # 整合Mybatis
 mybatis:
