--- a/codingce-springboot/springboot-09-shiro/src/main/resources/application.yml
+++ b/codingce-springboot/springboot-09-shiro/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     username: root
-    password: mxz123456
+    password: 123456
     #?serverTimezone=UTC解决时区的报错
     url: jdbc:mysql://cdb-q9atzwrq.bj.tencentcdb.com:10167/mybatis?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
     driver-class-name: com.mysql.cj.jdbc.Driver
