--- a/codingce-springboot/springboot-09-shiro/pom.xml
+++ b/codingce-springboot/springboot-09-shiro/pom.xml
@@ -19,6 +19,14 @@
     </properties>
 
     <dependencies>
+
+        <!--shiro-thymeleaf整合-->
+        <dependency>
+            <groupId>com.github.theborakompanioni</groupId>
+            <artifactId>thymeleaf-extras-shiro</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
