A 服务注册发现

--- a/dubbo + zookeeper/provider-server/src/main/resources/application.properties
+++ b/dubbo + zookeeper/provider-server/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port=8081
 
+# 服务应用名字
+dubbo.application.name=provider-server
+# 注册中心地址
+dubbo.registry.address=zookeeper://127.0.0.1:2181
+# 哪些服务要被注册
+dubbo.scan.base-packages=cn.com.codingce.service
