--- a/codingce-springcloud/pom.xml
+++ b/codingce-springcloud/pom.xml
@@ -7,6 +7,10 @@
     <groupId>cn.com.codingce</groupId>
     <artifactId>springcloud</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>springcloud-api</module>
+        <module>springcloud-provider-dept</module>
+    </modules>
 
     <!--打包方式-->
     <packaging>pom</packaging>
@@ -14,7 +18,10 @@
     <!--统一配置 版本号-->
     <properties>
         <junit.version>4.12</junit.version>
-        <lombok.version>1.6.10</lombok.version>
+        <lombok.version>1.16.10</lombok.version>
+        <mysql.version>8.0.11</mysql.version>
+        <druid.version>1.1.10</druid.version>
+        <logbackcore.version>1.2.3</logbackcore.version>
     </properties>
 
     <dependencyManagement>
@@ -40,14 +47,14 @@
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
-                <version>8.0.11</version>
+                <version>${mysql.version}</version>
             </dependency>
 
             <!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid</artifactId>
-                <version>1.1.10</version>
+                <version>${druid.version}</version>
             </dependency>
 
             <!-- https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter -->
@@ -57,8 +64,9 @@
                 <version>1.3.2</version>
             </dependency>
 
+            <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-core -->
             <dependency>
-                <groupId>cn.qos.logback</groupId>
+                <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-core</artifactId>
                 <version>1.2.3</version>
             </dependency>
@@ -67,15 +75,36 @@
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>${junit.version}}</version>
+                <version>${junit.version}</version>
             </dependency>
-
 
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
-                <version>${lombok.version}}</version>
+                <version>${lombok.version}</version>
             </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-devtools</artifactId>
+                <version>2.2.2.RELEASE</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-jetty -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-jetty</artifactId>
+                <version>2.2.2.RELEASE</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>2.2.2.RELEASE</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
