--- a/codingce-springcloud/springcloud-provider-dept/pom.xml
+++ b/codingce-springcloud/springcloud-provider-dept/pom.xml
@@ -46,10 +46,10 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-test</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -63,7 +63,7 @@
             <artifactId>spring-boot-starter-jetty</artifactId>
         </dependency>
 
-<!--        &lt;!&ndash;热部署工具&ndash;&gt;-->
+        <!--热部署工具-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
