A 生产者注册Eureka服务中; info信息配置

--- a/codingce-springcloud/pom.xml
+++ b/codingce-springcloud/pom.xml
@@ -17,6 +17,7 @@
         <module>springcloud-api</module>
         <module>springcloud-provider-dept</module>
         <module>springcloud-consumer-dept</module>
+        <module>springcloud-eureka-7001</module>
     </modules>
 
     <!--打包方式-->
