--- a/codingce-springcloud/springcloud-provider-dept/pom.xml
+++ b/codingce-springcloud/springcloud-provider-dept/pom.xml
@@ -12,6 +12,21 @@
     <artifactId>springcloud-provider-dept</artifactId>
 
     <dependencies>
+        <!--EUREKA-->
+        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-eureka -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+            <version>1.4.6.RELEASE</version>
+        </dependency>
+
+        <!--完善监控信息-->
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <!--我们需要拿到实体类, 所以要配置api -module-->
         <dependency>
             <groupId>cn.com.codingce</groupId>
