A 服务注册与集群搭建

--- a/codingce-springcloud/pom.xml
+++ b/codingce-springcloud/pom.xml
@@ -18,6 +18,7 @@
         <module>springcloud-provider-dept</module>
         <module>springcloud-consumer-dept</module>
         <module>springcloud-eureka-7001</module>
+        <module>springcloud-eureka-7002</module>
     </modules>
 
     <!--打包方式-->
