A 服务注册集群搭建

--- a/codingce-springcloud/pom.xml
+++ b/codingce-springcloud/pom.xml
@@ -19,6 +19,7 @@
         <module>springcloud-consumer-dept</module>
         <module>springcloud-eureka-7001</module>
         <module>springcloud-eureka-7002</module>
+        <module>springcloud-eureka-7003</module>
     </modules>
 
     <!--打包方式-->
