--- a/codingce-springcloud/springcloud-eureka-7001/src/main/resources/application.yml
+++ b/codingce-springcloud/springcloud-eureka-7001/src/main/resources/application.yml
@@ -4,11 +4,13 @@ server:
 # Eureka配置
 eureka:
   instance:
-    hostname: localhost #Eureka服务端实例的名字
+    hostname: eureka7001.com #Eureka服务端实例的名字
   client:
     register-with-eureka: false # 表示是否向eureka注册中心注册自己
     fetch-registry: false # 表示如果  false 则表示自己为注册中心
     service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      # 单机  http://${eureka.instance.hostname}:${server.port}/eureka/
+      # 集群 （关联）
+      defaultZone: http://eureka7002.com:7002/eureka/, http://eureka7003.com:7003/eureka/
 
 
