--- a/codingce-springcloud/pom.xml
+++ b/codingce-springcloud/pom.xml
@@ -22,6 +22,7 @@
         <module>springcloud-provider-dept-8002</module>
         <module>springcloud-provider-dept-8003</module>
         <module>springcloud-consumer-dept</module>
+        <module>springcloud-cusumer-dept-feign</module>
     </modules>
 
     <!--打包方式-->
