--- a/codingce-springcloud/springcloud-api/pom.xml
+++ b/codingce-springcloud/springcloud-api/pom.xml
@@ -24,6 +24,13 @@
 <!--            <artifactId>junit</artifactId>-->
 <!--        </dependency>-->
 
+        <!--feign-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
+            <version>1.4.6.RELEASE</version>
+        </dependency>
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
