--- a/codingce-springcloud/springcloud-provider-dept-hystrix-8001/pom.xml
+++ b/codingce-springcloud/springcloud-provider-dept-hystrix-8001/pom.xml
@@ -12,6 +12,13 @@
     <artifactId>springcloud-provider-dept-hystrix-8001</artifactId>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix</artifactId>
+            <version>1.4.6.RELEASE</version>
+        </dependency>
+
         <!--EUREKA-->
         <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-eureka -->
         <dependency>
