--- a/codingce-springcloud/springcloud-provider-dept-hystrix-8001/pom.xml
+++ b/codingce-springcloud/springcloud-provider-dept-hystrix-8001/pom.xml
@@ -13,6 +13,7 @@
 
     <dependencies>
 
+        <!--hystrix-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-hystrix</artifactId>
