--- a/codingce-springcloud/springcloud-provider-dept-hystrix-8001/pom.xml
+++ b/codingce-springcloud/springcloud-provider-dept-hystrix-8001/pom.xml
@@ -11,6 +11,12 @@
 
     <artifactId>springcloud-provider-dept-hystrix-8001</artifactId>
 
+    <!--
+        服务熔断: 服务端~ 某个服务超时或者异常, 引起熔断~ 保险丝
+        服务降级： 客户端~ 从整体网站请求负载考虑~ 当某个服务熔断或者关闭后 ， 服务将不再调用
+        此时在客户但我们可以准备 一个FallbackFactory, 返回一个默认的值(缺省值), 整体的服务水平下降了~ , 好歹能够使用
+    -->
+
     <dependencies>
 
         <!--hystrix-->
