A SpringCloud Hystrix DashBoard 环境搭建

--- a/codingce-springcloud/pom.xml
+++ b/codingce-springcloud/pom.xml
@@ -24,6 +24,8 @@
         <module>springcloud-consumer-dept</module>
         <module>springcloud-cusumer-dept-feign</module>
         <module>springcloud-provider-dept-hystrix-8001</module>
+        <module>springcloud-zuul-9527</module>
+        <module>springcloud-consumer-hystrix-dashboard</module>
     </modules>
 
     <!--打包方式-->
