--- a/codingce-springcloud/springcloud-provider-dept-8001/pom.xml
+++ b/codingce-springcloud/springcloud-provider-dept-8001/pom.xml
@@ -12,6 +12,20 @@
     <artifactId>springcloud-provider-dept</artifactId>
 
     <dependencies>
+        <!--actuator完善监控信息-->
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <!--hystrix-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix</artifactId>
+            <version>1.4.6.RELEASE</version>
+        </dependency>
+
         <!--EUREKA-->
         <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-eureka -->
         <dependency>
