--- a/codingce-springcloud/springcloud-provider-dept-hystrix-8001/pom.xml
+++ b/codingce-springcloud/springcloud-provider-dept-hystrix-8001/pom.xml
@@ -18,6 +18,12 @@
     -->
 
     <dependencies>
+        <!--actuator完善监控信息-->
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 
         <!--hystrix-->
         <dependency>
