--- a/codingce-springcloud/springcloud-provider-dept-8002/pom.xml
+++ b/codingce-springcloud/springcloud-provider-dept-8002/pom.xml
@@ -12,6 +12,13 @@
     <artifactId>springcloud-provider-dept-8002</artifactId>
 
     <dependencies>
+        <!--actuator完善监控信息-->
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <!--EUREKA-->
         <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-eureka -->
         <dependency>
