F 规范项目, 实体类项目包名与其他项目一致

--- a/codingce-springcloud/springcloud-provider-dept-8001/pom.xml
+++ b/codingce-springcloud/springcloud-provider-dept-8001/pom.xml
@@ -19,7 +19,7 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
-        <!--hystrix-->
+        <!--Hystrix服务熔断、降级、监控-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-hystrix</artifactId>
