--- a/codingce-springcloud/pom.xml
+++ b/codingce-springcloud/pom.xml
@@ -26,6 +26,7 @@
         <module>springcloud-provider-dept-hystrix-8001</module>
         <module>springcloud-zuul-9527</module>
         <module>springcloud-consumer-hystrix-dashboard</module>
+        <module>springcloud-config-server-3344</module>
     </modules>
 
     <!--打包方式-->
