--- a/codingce-springcloud/pom.xml
+++ b/codingce-springcloud/pom.xml
@@ -28,6 +28,8 @@
         <module>springcloud-consumer-hystrix-dashboard</module>
         <module>springcloud-config-server-3344</module>
         <module>springcloud-config-client-3355</module>
+        <module>springcloud-config-eureka-7001</module>
+        <module>springcloud-config-provider-dept-8001</module>
     </modules>
 
     <!--打包方式-->
