--- a/mybatis_plus/src/main/resources/application.properties
+++ b/mybatis_plus/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+# 设置开发环境
+spring.profiles.active=dev
+
+
+
 # 数据库连接配置
 spring.datasource.url=jdbc:mysql://cdb-q9atzwrq.bj.tencentcdb.com:10167/mybatis_plus?useSSL=false&useUnicode=true&serverTimezone=GMT%2B8
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -8,3 +13,6 @@ spring.datasource.password=123456
 
 # 配置日志
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+mybatis-plus.global-config.db-config.logic-delete-value=1
+mybatis-plus.global-config.db-config.logic-not-delete-value=0
