--- a/young-quartz/pom.xml
+++ b/young-quartz/pom.xml
@@ -43,36 +43,40 @@
       <artifactId>slf4j-jdk14</artifactId>
       <version>1.7.27</version>
     </dependency>
+
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.16</version>
     </dependency>
-    <dependency>
-      <groupId>cn.com.coding4fun</groupId>
-      <artifactId>coding4fun-hibernate</artifactId>
-      <version>1.1.24-SNAPSHOT</version>
-      <exclusions>
-        <exclusion>
-          <groupId>org.hibernate</groupId>
-          <artifactId>hibernate-core</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.hibernate.validator</groupId>
-          <artifactId>hibernate-validator</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>org.springframework</groupId>
-          <artifactId>spring-web</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
+
+<!--    <dependency>-->
+<!--      <groupId>cn.com.coding4fun</groupId>-->
+<!--      <artifactId>coding4fun-hibernate</artifactId>-->
+<!--      <version>1.1.24-SNAPSHOT</version>-->
+<!--      <exclusions>-->
+<!--        <exclusion>-->
+<!--          <groupId>org.hibernate</groupId>-->
+<!--          <artifactId>hibernate-core</artifactId>-->
+<!--        </exclusion>-->
+<!--        <exclusion>-->
+<!--          <groupId>org.hibernate.validator</groupId>-->
+<!--          <artifactId>hibernate-validator</artifactId>-->
+<!--        </exclusion>-->
+<!--        <exclusion>-->
+<!--          <groupId>org.springframework</groupId>-->
+<!--          <artifactId>spring-web</artifactId>-->
+<!--        </exclusion>-->
+<!--      </exclusions>-->
+<!--    </dependency>-->
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>4.13.1</version>
       <scope>test</scope>
     </dependency>
+
   </dependencies>
 
   <build>
