A 京东搜索环境搭建

--- a/codingce-es/codingce-es-jd/pom.xml
+++ b/codingce-es/codingce-es-jd/pom.xml
@@ -13,9 +13,13 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>codingce-es-jd</name>
     <description>Demo project for Spring Boot</description>
+
     <properties>
         <java.version>1.8</java.version>
+        <!-- 指定和本地版本一致 -->
+        <elasticsearch.version>7.10.1</elasticsearch.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -50,6 +54,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <!-- 解析网页 -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.10.2</version>
         </dependency>
     </dependencies>
 
