--- a/codingce-es/codingce-es-jd/pom.xml
+++ b/codingce-es/codingce-es-jd/pom.xml
@@ -62,6 +62,12 @@
             <artifactId>jsoup</artifactId>
             <version>1.10.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.73</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
