--- a/codingce-rabbitmq/rabbitmq-01-hello/pom.xml
+++ b/codingce-rabbitmq/rabbitmq-01-hello/pom.xml
@@ -17,6 +17,14 @@
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
+
+        <!-- 引入 rabbitmq 的相关依赖 -->
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>5.7.2</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
