--- a/codingce-rabbitmq/rabbitmq-02-springboot/pom.xml
+++ b/codingce-rabbitmq/rabbitmq-02-springboot/pom.xml
@@ -3,27 +3,29 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.2</version>
+        <groupId>cn.com.codingce</groupId>
+        <artifactId>codingce-rabbitmq</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>cn.com.codingce</groupId>
-    <artifactId>codingce-rabbitmq</artifactId>
+    <artifactId>rabbitmq-02-springboot</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>codingce-rabbitmq</name>
+    <name>rabbitmq-02-springboot</name>
     <description>Demo project for Spring Boot</description>
-    <modules>
-        <module>rabbitmq-01-hello</module>
-        <module>rabbitmq-02-springboot</module>
-    </modules>
     <properties>
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -49,11 +51,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.amqp</groupId>
-            <artifactId>spring-rabbit-test</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
