A springboot 实现 rabbitmq 消息队列 直连模式

--- a/codingce-rabbitmq/rabbitmq-02-springboot/pom.xml
+++ b/codingce-rabbitmq/rabbitmq-02-springboot/pom.xml
@@ -18,6 +18,7 @@
     </properties>
     <dependencies>
 
+        <!-- 引入 rabbitmq 集成依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
