F 修改成可复用模板

--- a/codingce-security/src/main/resources/application.properties
+++ b/codingce-security/src/main/resources/application.properties
@@ -10,7 +10,7 @@ swagger.enable=true
 # 数据库连接
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://cdb-q9atzwrq.bj.tencentcdb.com:10167/codingstudy?useUnicode=true&characterEncoding=utf-8&useSSL=false
-spring.datasource.username=wldc
+spring.datasource.username=root
 spring.datasource.password=123456
 
 
