--- a/codingce-sms/pom.xml
+++ b/codingce-sms/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>codingce-sms</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>codingce-sms</name>
-    <description>Demo project for Spring Boot</description>
+    <description>后端码匠</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
