--- a/codingce-gulimall/renren-fast/src/main/resources/application-dev.yml
+++ b/codingce-gulimall/renren-fast/src/main/resources/application-dev.yml
@@ -4,7 +4,7 @@ spring:
         druid:
             driver-class-name: com.mysql.cj.jdbc.Driver
             url: jdbc:mysql://localhost:3306/gulimall-admin?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-            username: admin
+            username: root
             password: 123456
             initial-size: 10
             max-active: 100
