--- a/codingce-gulimall/renren-fast/src/main/resources/application-test.yml
+++ b/codingce-gulimall/renren-fast/src/main/resources/application-test.yml
@@ -3,8 +3,8 @@ spring:
         type: com.alibaba.druid.pool.DruidDataSource
         druid:
             driver-class-name: com.mysql.cj.jdbc.Driver
-            url: jdbc:mysql://localhost:3306/renren_fast?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-            username: renren
+            url: jdbc:mysql://localhost:3306/gulimall-admin?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+            username: root
             password: 123456
             initial-size: 10
             max-active: 100
